[gd_scene load_steps=7 format=3 uid="uid://wh8ns02w61u"]

[ext_resource type="Script" path="res://Scripts/charger.gd" id="1_jcy44"]
[ext_resource type="Texture2D" uid="uid://cejpdt8umiqm0" path="res://Assets/sentry.png" id="1_obv7q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty1dy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ejq4"]
radius = 68.0
height = 152.0

[sub_resource type="Animation" id="Animation_rld0c"]
resource_name = "run"
length = 1.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_amogb"]
_data = {
"run": SubResource("Animation_rld0c")
}

[node name="Charger" type="CharacterBody2D"]
script = ExtResource("1_jcy44")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_obv7q")
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ty1dy")
disabled = true

[node name="floor" type="RayCast2D" parent="."]
position = Vector2(0, -16)
rotation = -1.5708
scale = Vector2(2, 30)
target_position = Vector2(-53.077, 0)

[node name="wallL" type="RayCast2D" parent="."]
target_position = Vector2(-42.6667, 0)

[node name="wallR" type="RayCast2D" parent="."]
target_position = Vector2(42.6667, 0)

[node name="hitox" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="hitox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_0ejq4")

[node name="SeeplayerL" type="RayCast2D" parent="."]
scale = Vector2(1, 5)
target_position = Vector2(-1551, 0)

[node name="SeeplayerR" type="RayCast2D" parent="."]
scale = Vector2(1, 3)
target_position = Vector2(1540, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_amogb")
}

[node name="stop" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="hitox" to="." method="_on_hitox_area_entered"]
[connection signal="body_entered" from="hitox" to="." method="_on_hitox_body_entered"]
[connection signal="timeout" from="stop" to="." method="_on_stop_timeout"]
